[package]
name = "transcript"
version = "0.1.12"
authors = ["leglesslamb <wu.rupert@outlook.com>"]
edition = "2018"
description = "A transcriber for European scripts."
license = "MIT"
repository = "https://github.com/leglesslamb/transcript"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "transcript"
path = "src/lib.rs"

[[bin]]
name = "transcript"
path = "src/main.rs"
